--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
             "MobileCart\\FrontendBundle\\" : ""
         }
     },
-    "type": "project",
+    "type": "symfony-bundle",
     "description": "Frontend Theme for Mobile Cart : an E-Commerce Shopping Cart built on Symfony",
     "keywords": ["shopping", "cart", "e-commerce"],
     "homepage": "http://mobilecart.io",
